<resources>
    <string name="position">Position</string>
    <string-array name="menu_arrays">
        <item>Facts</item>
        <item>Positions</item>
    </string-array>
    <string-array name="position_name_array">
        <item>The one-up</item>
        <item>Ballet dancer</item>
        <item>Bathroom attendant</item>
        <item>Butter churner</item>
        <item>Closed for business</item>
        <item>Couch surfer</item>
        <item>The shoulder holder (aka Cuban plunge)</item>
        <item>David Copperfield (aka Trick and treat)</item>
        <item>Downward dog</item>
        <item>Doggy-style</item>
        <item>H2Ohh yeah</item>
        <item>Heir to the throne</item>
        <item>Hovering butterfly</item>
        <item>Iron chef</item>
        <item>Lazy man</item>
        <item>Missionary</item>
        <item>Mountain climber</item>
        <item>Pole position</item>
        <item>The Pretzel (aka The camel ride)</item>
        <item>Reverse cowgirl</item>
        <item>Seated wheelbarrow</item>
        <item>Sixty-nine (aka Dinner for two)</item>
        <item>Snow angel</item>
        <item>The spider</item>
        <item>Spork</item>
        <item>Standing rear-entry</item>
        <item>Stand and deliver</item>
        <item>The CAT (Coital Alignment Technique)</item>
        <item>Waterfall</item>
        <item>Wheelbarrow (aka Hoover manoeuvre</item>
        <item>The X position</item>
    </string-array>
    <string-array name="position_benefits_array">
        <item>This position is ideal for women who are particularly sensitive along one side of the clitoris.</item>
        <item>Erotic movement for quickies in tight quarters. Good option for outdoor sex. Allows for easier penetration. She has control of thrusting, depth, and angle.</item>
        <item>Good for a quickie at a party.</item>
        <item>An extra rush of blood to her head to increase her ecstasy</item>
        <item>A variation of One up that allows for slow build-up.</item>
        <item>Convenient for a quickie and adds spice outside the bedroom.</item>
        <item>Allows deep penetration and targeting the G-spot.</item>
        <item>This position is the piece de resistance for women who prefer a strong, upward stroking motion</item>
        <item>Intensifies vaginal pleasure.</item>
        <item>Deep penetration and an erotic view.</item>
        <item>Good for an outdoors quickie, while still avoiding prying eyes</item>
        <item>The ultimate position for oral on the go, use this to get her in the mood and help her cut loose.</item>
        <item>She can direct the position of your tongue and the pressure against her by rising up or pressing down.</item>
        <item>Good position for a quickie with deep penetration</item>
        <item>Puts her in control; maintains intimacy.</item>
        <item>Lots of eye and body contact</item>
        <item>Creates great eye-to-eye contact. Keeps your weight off her bod</item>
        <item>Dual stimulation for her; for you - a great view of her rear and your penis entering her</item>
        <item>The deep penetration of doggy-style while face to face</item>
        <item>With a pillow under your head, you get an awesome view of her backside. She can control depth of penetration and pace</item>
        <item>Less strenuous than the standing varieties, while still offering intense sensation.</item>
        <item>Simultaneous oral pleasure</item>
        <item>She gets a prime view of your derriere. (side note: don’t try this in brightly-lit rooms)</item>
        <item>You both can still maintain eye contact while viewing the action at center stage</item>
        <item>Offers a natural bridge to more creative positions</item>
        <item>Greater thrusting power, and good for quickie sex in your kitchen, especially if she is wearing a skirt.</item>
        <item>You can enjoy the view of your penis thrusting</item>
        <item>Strong clitoral stimulation. In one study in the Journal of Sex and Marital Therapy, women who were unable to have an orgasm in the missionary position reported a 56 percent increase in orgasm frequency using the coital alignment technique.</item>
        <item>The blood will rush to his other head, too</item>
        <item>kilojoule-burner because it is so athletic. You can stroll around the house in this position, but draw the shades first.</item>
        <item>Prolonged slow sex to build arousal. Shallow thrusts stimulate the nerve endings in the head of your penis.</item>
    </string-array>
    <string name="rateNotice">Phản hồi cho chúng tôi nhé?</string>
    <string name="rate">Phản hồi</string>
    <string name="later">Sau</string>
    <string name="never">Không bao giờ</string>
    <string name="benefits">Benefits</string>
    <string name="try_this">Try this</string>
    <string name="desc">Description</string>
    <string name="like">Like</string>
    <string name="tried_this">I tried this</string>
    <string name="banner_unit_id">ca-app-pub-6811776882268454/9836989320</string>
</resources>