<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/shape"
    android:orientation="vertical"
    android:padding="3dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_bright"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/rateNotice"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/rateButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/rate" />

            <Button
                android:id="@+id/laterButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/later" />

            <Button
                android:id="@+id/neverButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/never" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>