<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <!--<com.startapp.android.publish.banner.Banner-->
    <!--android:id="@+id/startAppBanner"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_horizontal" />-->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_unit_id">
    </com.google.android.gms.ads.AdView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/adViewTop"
        android:layout_above="@+id/footer">

        <LinearLayout
            android:id="@+id/scroll_view_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/position_image"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="center"
                    android:src="@drawable/p1" />

                <TextView
                    android:id="@+id/position_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="Name:"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/benefits"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/position_benefits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="be"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:text="@string/desc"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/position_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="desc"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:text="@string/try_this"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!--<ProgressBar-->
            <!--style="?android:attr/progressBarStyleSmall"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/progressBar" />-->

            <TextView
                android:id="@+id/position_try_this"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="Try this:"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/startAppBanner1"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/like_layout"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_selector"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/likes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/like" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tried_this_layout"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_selector"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/verify" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/tried_this" />
        </LinearLayout>
    </LinearLayout>

    <com.startapp.android.publish.banner.Banner
        android:id="@+id/startAppBanner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal" />

</RelativeLayout>